--- a/src/app/pages/attendance/shiftmaster/shiftmaster.html
+++ b/src/app/pages/attendance/shiftmaster/shiftmaster.html
@@ -80,6 +80,25 @@
                 <div class="col-md-12">
                     <div class="row">
                         <div class="form-group col-md-4 ">
+                            <label for="inputPassword3 ">{{page.pageinfo.fields.SMExempMntFHalfDay.text}}</label>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <field-box page="page" ng-column="page.pageinfo.fields.SMExempMntFHalfDay " ng-entity="entity " form="editForm "></field-box>
+                        </div>
+                        <div class="form-group col-md-1">
+                            <label for="inputPassword3 ">Minutes</label>
+                        </div>
+                    </div>
+                    <div class="row">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="row">
+                        <div class="form-group col-md-4 ">
                             <label for="inputPassword3 ">{{page.pageinfo.fields.SMEarlyMarginInTime.text}}</label>
                         </div>
                         <div class="form-group col-md-4">
