--- a/src/app/pages/attendance/transaction/dailysummary/attendance.dailysummary.html
+++ b/src/app/pages/attendance/transaction/dailysummary/attendance.dailysummary.html
@@ -585,3 +585,72 @@
         </div>
     </div>
 </div>
+
+
+<div ng-show="isApprovedAttendence" class="panel panel-default bootstrap-panel large-panel">
+    <div class="panel-heading clearfix">
+        <div class="row">
+            <div class="col-md-9">
+                Attendance Approved Detail
+            </div>
+            <div class="col-md-3">
+                <div class="pull-right" ng-show="page.boxOptions.customButtons.length==0">
+                    <button type="button" class="btn btn-xs btn-danger" ng-click="closeForm()">
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>Close</button>
+                    <button type="button" class="btn btn-xs btn-danger" ng-click="approvedData()">
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>Approved</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="panel-body">
+        <table class="table">
+            <thead>
+                <tr>
+                    <td>
+                        <label ng-bind="page.pageinfo.fields.EmpName.text"></label>
+                    </td>
+                    <td>
+                        <label ng-bind="page.pageinfo.fields.AttDate.text"></label>
+                        <td>
+                            <label ng-bind="page.pageinfo.fields.InTime.text"></label>
+                        </td>
+                        <td>
+                            <label ng-bind="page.pageinfo.fields.OutTime.text"></label>
+                        </td>
+                        <td>
+                            <label ng-bind="page.pageinfo.fields.ODReason.text"></label>
+                        </td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="aprrovedEmp in selectedEmpData">
+                    <td style="text-align: left; color:brown">{{aprrovedEmp.EmpName}}</td>
+                    <td style="text-align: left">{{aprrovedEmp.AttDate}}</td>
+                    <td style="text-align: left">{{aprrovedEmp.InTime}}</td>
+                    <td style="text-align: left">{{aprrovedEmp.OutTime}}</td>
+                    <td style="text-align: left">{{aprrovedEmp.ODReason}}</td>
+                </tr>
+            </tbody>
+            <tr>
+                <td style="text-align: left"> Remark </td>
+                <td>
+                    <input class="form-control" type="text" ng-model="AttApprovedRemark"> </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <label>Status
+                        <span style="color:red">*</label>
+                </td>
+                <td>
+                    <select class="form-control" ng-model="StatusId" ng-options="status.value as status.name for status in attendanceSheetData.pageinfo.statuslist"></select>
+
+                </td>
+            </tr>
+
+        </table>
+
+    </div>
+</div>
