--- a/src/app/pages/payroll/masters/empBenefit/empBenefit.html
+++ b/src/app/pages/payroll/masters/empBenefit/empBenefit.html
@@ -34,6 +34,19 @@
                             <button class="btn btn-primary" ng-click="saveEmpBenefit();">Save</button>
                         </div>
                     </div>
+                    <div class="col-md-1" ng-show="showSave">
+                        <label></label>
+                        <div>
+                            <button class="btn btn-primary" ng-click=uploadRecord()>Upload</button>
+                        </div>
+                    </div>
+
+                    <div class="col-md-1">
+                        <label></label>
+                        <div>
+                            <button class="btn btn-primary" ng-click=downLoadTemp()>DownLoad Template</button>
+                        </div>
+                    </div>
 
                 </div>
 
@@ -41,7 +54,7 @@
                     <h3 class="with-line "></h3>
                     <div class="row">
                         <div class="col-md-12">
-                            <div id="gridopt" style="height: 400px;" style="height: 200px; " ui-grid="weekGridOptions" ui-grid-cellNav ui-grid-pagination
+                            <div id="gridopt" style="height: 350px; width: 600px"  ui-grid="weekGridOptions" ui-grid-cellNav ui-grid-pagination
                                 ui-grid-edit ui-grid-expandable ui-grid-auto-resize ui-grid-selection class="grid weekGridOptionss paybandgrid payband"></div>
 
                         </div>
